# beads_rust

./: .gitignore  AGENTS.md  BR_RUSQLITE_FORK_PLAN.md  Cargo.toml  install.sh
.beads/: issues.jsonl
.github/workflows/: release.yml
benches/: storage_perf.rs
docs/agent/: AGENTS.md
src/: main.rs
src/cli/: mod.rs
src/cli/commands/: agents.rs  audit.rs  changelog.rs  close.rs  comments.rs  config.rs  count.rs  create.rs  delete.rs  dep.rs  doctor.rs  info.rs  init.rs  list.rs  q.rs  search.rs  show.rs  stale.rs  sync.rs  upgrade.rs  version.rs  where.rs
src/config/: mod.rs
src/error/: mod.rs  structured.rs
src/format/: context.rs  markdown.rs  rich.rs  text.rs
src/output/components/: issue_panel.rs
src/storage/: db.rs  events.rs  mod.rs  schema.rs  sqlite.rs
src/sync/: history.rs  mod.rs  path.rs
src/util/: mod.rs
src/validation/: mod.rs
tests/: bench_cold_warm.rs  bench_cold_warm_start.rs  bench_real_datasets.rs  bench_synthetic_scale.rs  benchmark_comparison.rs  benchmark_datasets.rs  conformance.rs  conformance_labels_comments.rs  conformance_schema.rs  conformance_workflows.rs  e2e_audit.rs  e2e_basic_lifecycle.rs  e2e_cold_warm_benchmarks.rs  e2e_concurrency.rs  e2e_create_output.rs  e2e_env_overrides.rs  e2e_git_safety_full_cli.rs  e2e_installer.rs  e2e_labels.rs  e2e_sync_artifacts.rs  e2e_upgrade.rs  repro_create_output.rs  repro_list_sort.rs  storage_crud.rs  storage_invariants.rs
tests/common/: baseline.rs  binary_discovery.rs  cli.rs  dataset_registry.rs  harness.rs  report_indexer.rs  scenarios.rs
