[package]
name = "beads_rust"
version = "0.1.19"
edition = "2024"
rust-version = "1.88"
description = "Agent-first issue tracker (SQLite + JSONL)"
license = "MIT"
repository = "https://github.com/Dicklesworthstone/beads_rust"
keywords = ["cli", "issue-tracker", "sqlite", "agent"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "br"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5.60", features = ["derive", "env", "unstable-ext"] }
clap_complete = { version = "4.5.66", features = ["unstable-dynamic"] }

# Database (pure-Rust SQLite with concurrent writer support)
# NOTE: transitive fsqlite workspace deps listed explicitly so rch syncs them
fsqlite = "0.1.0"
fsqlite-types = "0.1.0"
fsqlite-error = "0.1.0"
fsqlite-core = "0.1.0"
fsqlite-func = "0.1.0"
fsqlite-vdbe = "0.1.0"
fsqlite-vfs = "0.1.0"
fsqlite-pager = "0.1.0"
fsqlite-parser = "0.1.0"
fsqlite-planner = "0.1.0"
fsqlite-wal = "0.1.0"
fsqlite-btree = "0.1.0"
fsqlite-ast = "0.1.0"
fsqlite-mvcc = "0.1.0"
fsqlite-observability = "0.1.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
schemars = { version = "1.0", features = ["derive", "chrono04"] }

# Time
chrono = { version = "0.4.43", features = ["serde"] }

# Hashing
sha2 = "0.10.9"

# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }

# Terminal
indicatif = "0.18.4"
crossterm = "0.29"

# Rich terminal output (sibling project)
rich_rust = { version = "0.2.0", features = ["full"] }

# TOON format support (sibling project)
toon_rust = { version = "0.2.0", package = "tru" }

# Path normalization (strips \\?\ prefix on Windows)
dunce = "1.0.5"

# Utilities
once_cell = "1.21"
regex = "1.12"
unicode-width = "0.2.2"

# Versioning
semver = "1.0.27"

# Self-update (optional; gated behind the `self_update` feature)
self_update = { version = "0.42", features = ["rustls", "signatures"], default-features = false, optional = true }

[build-dependencies]
vergen-gix = { version = "9.1", features = ["build", "cargo", "rustc"] }

[dev-dependencies]
tempfile = "3.25"
assert_cmd = "2.1"
predicates = "3.1.4"
criterion = { version = "0.8.2", features = ["html_reports"] }
walkdir = "2.5"
insta = { version = "1.46", features = ["json", "yaml"] }
proptest = "1.10"
rand = "0.10"

[[bench]]
name = "benchmarks"
path = "benches/storage_perf.rs"
harness = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[features]
default = ["self_update"]
self_update = ["dep:self_update"]

# Override crates.io fsqlite with GitHub HEAD to pick up uring-fs removal
# (pure-Rust UnixVfs replaces IoUringVfs, eliminating glibc 2.39 requirement)
[patch.crates-io]
fsqlite          = { git = "https://github.com/Dicklesworthstone/frankensqlite", branch = "main", package = "fsqlite" }
fsqlite-ast      = { git = "https://github.com/Dicklesworthstone/frankensqlite", branch = "main", package = "fsqlite-ast" }
fsqlite-btree    = { git = "https://github.com/Dicklesworthstone/frankensqlite", branch = "main", package = "fsqlite-btree" }
fsqlite-core     = { git = "https://github.com/Dicklesworthstone/frankensqlite", branch = "main", package = "fsqlite-core" }
fsqlite-error    = { git = "https://github.com/Dicklesworthstone/frankensqlite", branch = "main", package = "fsqlite-error" }
fsqlite-ext-fts5 = { git = "https://github.com/Dicklesworthstone/frankensqlite", branch = "main", package = "fsqlite-ext-fts5" }
fsqlite-ext-json = { git = "https://github.com/Dicklesworthstone/frankensqlite", branch = "main", package = "fsqlite-ext-json" }
fsqlite-ext-rtree = { git = "https://github.com/Dicklesworthstone/frankensqlite", branch = "main", package = "fsqlite-ext-rtree" }
fsqlite-func     = { git = "https://github.com/Dicklesworthstone/frankensqlite", branch = "main", package = "fsqlite-func" }
fsqlite-mvcc     = { git = "https://github.com/Dicklesworthstone/frankensqlite", branch = "main", package = "fsqlite-mvcc" }
fsqlite-observability = { git = "https://github.com/Dicklesworthstone/frankensqlite", branch = "main", package = "fsqlite-observability" }
fsqlite-pager    = { git = "https://github.com/Dicklesworthstone/frankensqlite", branch = "main", package = "fsqlite-pager" }
fsqlite-parser   = { git = "https://github.com/Dicklesworthstone/frankensqlite", branch = "main", package = "fsqlite-parser" }
fsqlite-planner  = { git = "https://github.com/Dicklesworthstone/frankensqlite", branch = "main", package = "fsqlite-planner" }
fsqlite-types    = { git = "https://github.com/Dicklesworthstone/frankensqlite", branch = "main", package = "fsqlite-types" }
fsqlite-vdbe     = { git = "https://github.com/Dicklesworthstone/frankensqlite", branch = "main", package = "fsqlite-vdbe" }
fsqlite-vfs      = { git = "https://github.com/Dicklesworthstone/frankensqlite", branch = "main", package = "fsqlite-vfs" }
fsqlite-wal      = { git = "https://github.com/Dicklesworthstone/frankensqlite", branch = "main", package = "fsqlite-wal" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
# Allow these lints to unblock CI (need higher priority than groups)
cast_precision_loss = { level = "allow", priority = 1 }
doc_markdown = { level = "allow", priority = 1 }
missing_const_for_fn = { level = "allow", priority = 1 }
uninlined_format_args = { level = "allow", priority = 1 }
useless_let_if_seq = { level = "allow", priority = 1 }
format_push_string = { level = "allow", priority = 1 }
