[package]
name = "beads_rust"
version = "0.1.20"
edition = "2024"
rust-version = "1.88"
description = "Agent-first issue tracker (SQLite + JSONL)"
license = "MIT"
repository = "https://github.com/stefanraath3/beads_rust"
keywords = ["cli", "issue-tracker", "sqlite", "agent"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "bx"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5.60", features = ["derive", "env", "unstable-ext"] }
clap_complete = { version = "4.5.66", features = ["unstable-dynamic"] }

# Database (bundled SQLite via rusqlite)
rusqlite = { version = "0.37", features = ["bundled"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
schemars = { version = "1.0", features = ["derive", "chrono04"] }

# Time
chrono = { version = "0.4.43", features = ["serde"] }

# Hashing
sha2 = "0.10.9"

# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }

# Terminal
indicatif = "0.18.4"
crossterm = "0.29"

# Rich terminal output (sibling project)
rich_rust = { version = "0.2.0", features = ["full"] }

# TOON format support (sibling project)
toon_rust = { version = "0.2.0", package = "tru" }

# Path normalization (strips \\?\ prefix on Windows)
dunce = "1.0.5"

# Utilities
once_cell = "1.21"
regex = "1.12"
unicode-width = "0.2.2"

# Versioning
semver = "1.0.27"

# Self-update (optional; gated behind the `self_update` feature)
self_update = { version = "0.42", features = ["rustls", "signatures"], default-features = false, optional = true }

[build-dependencies]
vergen-gix = { version = "9.1", features = ["build", "cargo", "rustc"] }

[dev-dependencies]
tempfile = "3.25"
assert_cmd = "2.1"
predicates = "3.1.4"
criterion = { version = "0.8.2", features = ["html_reports"] }
walkdir = "2.5"
insta = { version = "1.46", features = ["json", "yaml"] }
proptest = "1.10"
rand = "0.10"

[[bench]]
name = "benchmarks"
path = "benches/storage_perf.rs"
harness = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[features]
default = ["self_update"]
self_update = ["dep:self_update"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
# Allow these lints to unblock CI (need higher priority than groups)
cast_precision_loss = { level = "allow", priority = 1 }
doc_markdown = { level = "allow", priority = 1 }
missing_const_for_fn = { level = "allow", priority = 1 }
uninlined_format_args = { level = "allow", priority = 1 }
useless_let_if_seq = { level = "allow", priority = 1 }
format_push_string = { level = "allow", priority = 1 }
